--- a/rustbook/thread-sample/Cargo.toml
+++ b/rustbook/thread-sample/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "bitonic-sorter"
+name = "thread-sample"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num_cpus = "1.13.0"
-rand = "0.8.4"
-rand_pcg = "0.3.1"
-rayon = "1.5.1"
